--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,15 @@
+html{
+  box-sizing: content-box;
+}
+
+html *{
+  box-sizing: inherit;
+}
+
 body{
   margin: 0;
   padding: 0;
+  font-family: Arial;
 }
 
 :root{
